# tasks

./: .gitignore  readme.md
cpp/: .gitignore  1.cpp  1.py  2.cpp  Untitled.ipynb  bfs.cpp  geometry.cpp  geometry.h  ida_star.cpp  lesson1.cpp  lesson2.cpp
cpp/FL/taskA/: CMakeLists.txt  input.txt  taskA.cpp
cpp/FL/taskA/src/: taskA.cpp  taskA.hpp
cpp/FL/taskA/tests/: main.cpp  tests.cpp
cpp/bfs/: CMakeLists.txt
cpp/censor/: censor.py  input.txt  output.txt  words.txt
cpp/exam/: 1-span.cpp  2-optional.cpp
cpp/geometry/: CMakeLists.txt
cpp/lab1/: A.cpp  C.cpp  D.cpp  D1.cpp  D2.cpp  E.cpp  E1.cpp  E2.cpp  E3.cpp  E5.cpp  E_main.cpp  F.cpp  F2.cpp  F5.cpp
cpp/lab2/: readme.md  task1.cpp  task2.cpp  task3.cpp
cpp/lab2-2/: 3.cpp  reader.h  readers.txt
cpp/lab2-3/: 1.cpp  2.cpp  3.cpp  data1.txt  data2.txt  data3.txt  data_types.txt  test.txt  test1.txt
cpp/lab2-5/: readme.md
cpp/lab3/: readme.md  task1.cpp  task2.cpp
cpp/lab4/: 1.cpp  2.cpp  readme.md
cpp/test/: 10.cpp  2.cpp  4.cpp  5.cpp  9.cpp
cpp/tuple/: 2_5298598825479375111.cpp
csharp/Bankomat/: Bank.cs  Bankomat.cs  Bankomat.sln  Card.cs  Client.cs  Program.cs  Screen.cs  Slot.cs  SlotSet.cs  Transaction.cs  readme.md
materials/: readme.md
python/: 1.py
python/code_review/: comments.txt  i.cpp  sehfge.dsh  shell.py  unit.py
python/game/: game.py  main.py
python/lab1/: LRU.py  merge_sorter.py  merge_sorter1.py  merge_sorter2.py  profiler.py  solution.py  solution1.py  solution2.py  takes.py  takes1.py  takes2.py  takes_input.py
python/lab2/: task1.py  task2.py  task3.py  (+2 more)
(+195 files in other folders)
